--- a/17_RFID/keil C/17_RFID.build_log.htm
+++ b/17_RFID/keil C/17_RFID.build_log.htm
@@ -3,8 +3,8 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Tool Versions:</h2>
-IDE-Version: µVision V5.23.0.0
-Copyright (C) 2017 ARM Ltd and ARM Germany GmbH. All rights reserved.
+IDE-Version: µVision V5.20.0.39
+Copyright (C) 2016 ARM Ltd and ARM Germany GmbH. All rights reserved.
 License Information: thong dinh, hcmut, LIC=21EY8-3I0B2-2Y5V0-BKQNH-KRD7D-72XKV
  
 Tool Versions:
@@ -21,8 +21,8 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V2.0.18.0
 Dialog DLL:      TCM.DLL V1.27.0.0
  
 <h2>Project:</h2>
-C:\Users\nguye\Desktop\_RFID project\17_RFID\keil C\17_RFID.uvprojx
-Project File Date:  04/02/2017
+C:\Users\nguye\Desktop\mainRFIDproject\17_RFID\keil C\17_RFID.uvprojx
+Project File Date:  06/02/2017
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 4 (build 422)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
@@ -30,36 +30,20 @@ Build target 'Target 1'
 compiling main.c...
 ..\Libraries\CMSIS\Device\ST\STM32F4xx\Include\stm32f4xx.h(94): warning:  #1215-D: #warning directive: "dinh nghia STM32F40_41xxx trong file stmf4xx.h"
   #warning "dinh nghia STM32F40_41xxx trong file stmf4xx.h"
-..\my_delay.h(10): warning:  #1-D: last line of file ends without a newline
+..\Inc\my_delay.h(10): warning:  #1-D: last line of file ends without a newline
   #endif
-..\main.c(26): warning:  #223-D: function "printf" declared implicitly
+..\Src\main.c(24): warning:  #223-D: function "printf" declared implicitly
   		printf("CHUONG TRINH RFID\r\n");
-..\main.c(77): warning:  #223-D: function "printf" declared implicitly
+..\Src\main.c(91): warning:  #223-D: function "printf" declared implicitly
           if((k%4) == 3	)			printf("block  %d ( trailer) \r\n", k);
-..\main.c(78): warning:  #223-D: function "printf" declared implicitly
+..\Src\main.c(92): warning:  #223-D: function "printf" declared implicitly
   				else printf("block %d\r\n", k);	
-..\main.c(82): warning:  #223-D: function "printf" declared implicitly
+..\Src\main.c(96): warning:  #223-D: function "printf" declared implicitly
   									printf("hex= ");
-..\main.c: 6 warnings, 0 errors
-compiling mfrc522.c...
-..\Libraries\CMSIS\Device\ST\STM32F4xx\Include\stm32f4xx.h(94): warning:  #1215-D: #warning directive: "dinh nghia STM32F40_41xxx trong file stmf4xx.h"
-  #warning "dinh nghia STM32F40_41xxx trong file stmf4xx.h"
-..\my_delay.h(10): warning:  #1-D: last line of file ends without a newline
-  #endif
-..\mfrc522.c(85): warning:  #177-D: variable "val"  was declared but never referenced
-  	uint32_t val;
-..\mfrc522.c(428): warning:  #550-D: variable "status"  was set but never used
-      uint8_t status;
-..\mfrc522.c(582): warning:  #223-D: function "printf" declared implicitly
-          printf(" ");
-..\mfrc522.c(584): warning:  #223-D: function "printf" declared implicitly
-       printf("%02X \x00", (uint8_t)(*(buffer + i)));
-..\mfrc522.c(580): warning:  #177-D: variable "text"  was declared but never referenced
-       uint8_t text[4];
-..\mfrc522.c: 7 warnings, 0 errors
+..\Src\main.c: 6 warnings, 0 errors
 linking...
-Program Size: Code=9572 RO-data=488 RW-data=72 ZI-data=1656  
-".\17_RFID.axf" - 0 Error(s), 13 Warning(s).
+Program Size: Code=9564 RO-data=488 RW-data=72 ZI-data=1656  
+".\17_RFID.axf" - 0 Error(s), 6 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -70,14 +54,14 @@ Package Vendor: ARM
    * Component: CORE Version: 5.0.1
 
 <h2>Collection of Component include folders:</h2>
-  .\RTE\_Target_1
+  C:\Users\nguye\Desktop\mainRFIDproject\17_RFID\keil C\RTE
   C:\Keil_v5\ARM\PACK\ARM\CMSIS\5.0.1\CMSIS\Include
   C:\Keil_v5\ARM\PACK\Keil\STM32F4xx_DFP\2.11.0\Drivers\CMSIS\Device\ST\STM32F4xx\Include
 
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.0.1
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:11
 </pre>
 </body>
 </html>
